// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideCard tests should render SlideCard active 1`] = `
<DocumentFragment>
  .c5 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
  font-family: roboto;
  font-weight: 400;
  line-height: 1.6;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  font-family: roboto;
  margin-left: 0.75rem;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c2 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c3 {
  color: #276EF1;
  font-size: 1.5rem;
}

.c0 {
  position: relative;
  border: none;
  display: flex;
  flex-direction: column;
  text-align: left;
  background-color: #FFFFFF;
  border-radius: 0.5rem;
  padding: 1.25rem 1.25rem 1.5625rem 1.25rem;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
  cursor: pointer;
  transition: scale 0.2s ease-in-out;
  overflow: hidden;
}

.c0::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  animation: cmYSia 10s linear;
  height: 5px;
  background-color: #276EF1;
}

.c1 {
  display: flex;
  align-items: center;
  margin-bottom: 0.75rem;
}

<button
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-testid="icon-container"
        size="24"
      >
        <span
          class="c3 material-symbols-rounded"
          color="#276EF1"
          data-testid="icon"
          size="24"
        >
          help
        </span>
      </div>
      <h3
        class="c4"
        font-family="roboto"
        ml="0.75rem"
      >
        title
      </h3>
    </div>
    <p
      class="c5"
      font-family="roboto"
      font-weight="400"
    >
      text
    </p>
  </button>
</DocumentFragment>
`;

exports[`SlideCard tests should render SlideCard correctly 1`] = `
<DocumentFragment>
  .c5 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
  font-family: roboto;
  font-weight: 400;
  line-height: 1.6;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  font-family: roboto;
  margin-left: 0.75rem;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c2 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c3 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  position: relative;
  border: none;
  display: flex;
  flex-direction: column;
  text-align: left;
  background-color: #F6F6F6;
  border-radius: 0.5rem;
  padding: 1.25rem 1.25rem 1.5625rem 1.25rem;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
  cursor: pointer;
  transition: scale 0.2s ease-in-out;
  overflow: hidden;
}

.c1 {
  display: flex;
  align-items: center;
  margin-bottom: 0.75rem;
}

<button
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-testid="icon-container"
        size="24"
      >
        <span
          class="c3 material-symbols-rounded"
          color="#000000"
          data-testid="icon"
          size="24"
        >
          help
        </span>
      </div>
      <h3
        class="c4"
        font-family="roboto"
        ml="0.75rem"
      >
        title
      </h3>
    </div>
    <p
      class="c5"
      font-family="roboto"
      font-weight="400"
    >
      text
    </p>
  </button>
</DocumentFragment>
`;
